--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,12 @@
         "dev": "node index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
+        "axios": "^1.6.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "axios": "^1.6.2"
+        "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "prisma": "^7.2.0"
     }
 }
